--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
-    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.5.5. Featuring new automations for Duplicate MR Printing and Updating Outcomes, a collapsible UI, and more.">
-    <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation">
+    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.6.0. Featuring new automations for eMB Verification, Scheme Closing, Cloud File Management, and more.">
+    <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Bot v2.5.5">
+    <meta property="og:title" content="NREGA Bot v2.6.0">
     <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks.">
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
     <meta property="og:url" content="https://nregabot.com/">
@@ -78,7 +78,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.5.5 is here!</strong> Featuring new automations, a collapsible UI, and major stability fixes.
+                        <strong>Version 2.6.0 is here!</strong> Featuring Universal Search, enhanced Cloud Storage, and a seamless Upgrade flow.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -90,8 +90,8 @@
                 <div id="downloads" class="mt-10">
                     <p class="text-gray-600 mb-4 dark:text-gray-400">Download the app and start your 30-day free trial instantly.</p>
                     <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.5.5-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.5.5-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.0-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.0-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
                     </div>
                     <p class="mt-6 text-sm text-gray-500 dark:text-gray-400"><a href="versions.html" class="underline hover:text-blue-600 dark:hover:text-blue-400">Looking for an older version?</a></p>
                 </div>
@@ -146,6 +146,9 @@
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Wagelist Automation</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Generate new wagelists and send them for e-FMS payment processing with a single click.</p></div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Jobcard Verification</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Verify job cards and automatically upload the correct family photo based on the job card number.</p></div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>eMB Entry</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Fill the Measurement Book (MB) entry page for multiple work codes automatically.</p></div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>eMB Verify</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Automate the verification process for Measurement Book entries in bulk.</p></div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Scheme Closing</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Close out multiple schemes efficiently by automating the finalization process.</p></div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Delete Work Allocation</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Quickly remove work allocations for a list of Muster Roll numbers.</p></div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Workcode Gen (Dynamic)</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Create new work codes in bulk by loading categories from the website and reading data from a simple CSV file.</p></div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>IF Editor (Dynamic)</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Automate the multi-page IF editing process with a flexible UI for all settings, using a simple CSV for work codes.</p></div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700"><h4>Verify ABPS</h4><p class="text-gray-600 dark:text-gray-400 mt-2">Automate checking worker Aadhaar numbers with NPCI, with an auto-mode to process all villages in a panchayat.</p></div>
