--- a/web/versions.html
+++ b/web/versions.html
@@ -42,6 +42,22 @@
                 <div class="max-w-4xl mx-auto space-y-8">
 
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.1 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 10, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **Major UI Overhaul:** Re-architected the 'WC Gen' and 'IF Editor' tabs with a new tabbed layout (Settings, Results, Logs) for a cleaner, more spacious interface.</li>
+                            <li>✨ **New Feature (Profile Binding):** Selecting a saved profile in the 'WC Gen' tab now automatically triggers the web category loading process, making setup much faster.</li>
+                            <li>🛠️ **Improvement (UI):** Added icons to the main browser launch and website link buttons for better visual identification.</li>
+                            <li>🛠️ **Improvement (UX):** Moved the 'Download Demo CSV' buttons from the footer directly into their relevant tabs ('WC Gen' and 'IF Editor') for more intuitive access.</li>
+                            <li>🐞 **Bug Fix:** Fixed the 'Download Demo CSV' buttons being invisible on some themes by applying a high-contrast green color.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.1-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.1-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+
+                    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.0 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 9, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
