--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
-    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.6.1. Featuring new automations for eMB Verification, Scheme Closing, Cloud File Management, and more.">
+    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.6.2. Featuring new automations for eMB Verification, Scheme Closing, Cloud File Management, and more.">
     <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Bot v2.6.1">
+    <meta property="og:title" content="NREGA Bot v2.6.2">
     <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks.">
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
     <meta property="og:url" content="https://nregabot.com/">
@@ -78,7 +78,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.6.1 is here!</strong> Featuring Universal Search, enhanced Cloud Storage, and a seamless Upgrade flow.
+                        <strong>Version 2.6.2 is here!</strong> Featuring a drag & drop File Manager, new subscription plans, and major stability fixes.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -90,8 +90,8 @@
                 <div id="downloads" class="mt-10">
                     <p class="text-gray-600 mb-4 dark:text-gray-400">Download the app and start your 30-day free trial instantly.</p>
                     <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.6.1-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.6.1-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.2-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.2-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
                     </div>
                     <p class="mt-6 text-sm text-gray-500 dark:text-gray-400"><a href="versions.html" class="underline hover:text-blue-600 dark:hover:text-blue-400">Looking for an older version?</a></p>
                 </div>
@@ -127,9 +127,11 @@
                 <div class="container mx-auto px-6 text-center">
                     <h3 class="text-3xl font-bold text-gray-900 dark:text-white">Support the Project</h3>
                     <p class="text-gray-600 dark:text-gray-400 mt-2 max-w-3xl mx-auto">Your 30-day free trial starts automatically. After the trial, please consider purchasing a license to support app maintenance, bug fixes, and future updates.</p>
-                    <div class="mt-12 grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                        <div class="bg-white rounded-xl shadow-lg p-8 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-2xl">☕ Monthly Plan</h4><p class="text-5xl font-extrabold my-4 flex justify-center items-baseline gap-x-3"><span>₹99</span><del class="text-3xl font-medium text-gray-400 dark:text-gray-500">₹199</del></p><p class="text-gray-600 dark:text-gray-400 mb-8">Get a <span class="font-semibold">1-Month License Key</span> to continue using all features of the application.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-3 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get 1-Month Key</a></div>
-                        <div class="bg-blue-600 text-white rounded-xl shadow-lg p-8 border border-blue-700 flex flex-col ring-4 ring-blue-300 dark:ring-blue-500/50"><h4 class="font-bold text-2xl">🍻 Yearly Plan</h4><p class="text-5xl font-extrabold my-4 flex justify-center items-baseline gap-x-3"><span>₹999</span><del class="text-3xl font-medium text-blue-200 opacity-90">₹1999</del></p><p class="opacity-90 mb-8">Save money with our yearly plan and get a <span class="font-bold">1-Year License Key</span> for your generous support.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-white text-blue-600 font-semibold w-full py-3 rounded-lg hover:bg-blue-100 transition-colors">Get 1-Year Key</a></div>
+                    <div class="mt-12 grid md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Monthly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹99</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 1-Month license key. Perfect for short-term needs.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Quarterly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹289</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 3-Month license key. A great balance of value and flexibility.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Half Yearly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹569</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 6-Month license key. Ideal for longer projects.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
+                        <div class="bg-blue-600 text-white rounded-xl shadow-lg p-6 border border-blue-700 flex flex-col ring-4 ring-blue-300 dark:ring-blue-500/50"><h4 class="font-bold text-xl">Yearly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹999</span></p><p class="opacity-90 text-sm mb-6">A 1-Year license key. The best value for dedicated users.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-white text-blue-600 font-semibold w-full py-2 rounded-lg hover:bg-blue-100 transition-colors">Get Key</a></div>
                     </div>
                 </div>
             </section>
