--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
-    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.6.2. Featuring new automations for eMB Verification, Scheme Closing, Cloud File Management, and more.">
+    <meta name="description" content="Automate your NREGA tasks with NREGA Bot v2.6.3. Featuring new automations for eMB Verification, Scheme Closing, Cloud File Management, and more.">
     <meta name="keywords" content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Bot v2.6.2">
+    <meta property="og:title" content="NREGA Bot v2.6.3">
     <meta property="og:description" content="The ultimate tool to save time and automate your tedious NREGA data entry tasks.">
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
     <meta property="og:url" content="https://nregabot.com/">
@@ -74,11 +74,13 @@
 
     <div id="main-content">
         <section id="home">
+
+            <!-- Banner section -->
             <div class="bg-blue-600 dark:bg-blue-500">
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.6.2 is here!</strong> Featuring a drag & drop File Manager, new subscription plans, and major stability fixes.
+                        <strong>Version 2.6.3 is here!</strong> Featuring the new 'Resend Rejected Wagelist' automation, major Jobcard Verification fixes, and more.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -87,11 +89,13 @@
             <main class="container mx-auto px-6 pt-16 pb-12 text-center">
                 <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-tight dark:text-white">Automate Your NREGA Tasks.</h2>
                 <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto dark:text-gray-400">Stop wasting hours on repetitive data entry. NREGA Bot handles your most tedious tasks so you can focus on what matters.</p>
+
+                <!-- Download section -->
                 <div id="downloads" class="mt-10">
                     <p class="text-gray-600 mb-4 dark:text-gray-400">Download the app and start your 30-day free trial instantly.</p>
                     <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.6.2-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.6.2-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.3-Setup.exe" class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download for Windows</a>
+                        <a href="https://nregabot.com/updates/NREGABot-v2.6.3-macOS.dmg" class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download for macOS</a>
                     </div>
                     <p class="mt-6 text-sm text-gray-500 dark:text-gray-400"><a href="versions.html" class="underline hover:text-blue-600 dark:hover:text-blue-400">Looking for an older version?</a></p>
                 </div>
