--- a/web/versions.html
+++ b/web/versions.html
@@ -44,6 +44,22 @@
                 <div id="version-list" class="max-w-4xl mx-auto space-y-8">
 
                     <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.3 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 19, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **New Automation: Resend Rejected Wagelist** - Added a new tab to automate reprocessing payments for transactions rejected by the bank.</li>
+                            <li>✨ **New Feature: Folder Sharing** - Implemented a new folder sharing option in the File Manager for collaborative work.</li>
+                            <li>🛠️ **Major Improvement: Jobcard Verification** - Overhauled the 'Jobcard Verification' tab with a 'Process all villages' option and fixed all critical photo upload bugs.</li>
+                            <li>🛠️ **Improvement: Dynamic Footer Bar** - The app's footer now shows the real-time automation status and server connectivity.</li>
+                            <li>🛠️ **Improvement: UI Layout** - Updated the layout of the 'Delete Work Allocation' tab for a more intuitive user experience.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.3-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.3-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+
+                    <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.2 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 16, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
