--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
     <meta property="og:url" content="https://nregabot.com/">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Nrega Bot">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
