--- a/web/index.html
+++ b/web/index.html
@@ -52,10 +52,12 @@
                 <span>NREGA Bot</span>
             </a>
             <nav class="hidden md:flex items-center space-x-8">
-                <a href="#home" class="text-gray-600 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400">Home</a>
-                <a href="how-to-use.html" class="text-gray-600 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400">How to Use</a>
-                <a href="#faq" class="text-gray-600 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400">FAQ</a>
-                <a href="contact.html" class="text-gray-600 hover:text-blue-600 dark:text-gray-400 dark:hover:text-blue-400">Contact</a>
+                <a href="#home" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Home</a>
+                <a href="how-to-use.html" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">How to Use</a>
+                <a href="#faq" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">FAQ</a>
+                <a href="contact.html" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Contact</a>
+                <a href="https://bookmark.nregabot.com" target="_blank" rel="noopener noreferrer" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Bookmarks</a>
+                <a href="https://license.nregabot.com/login" target="_blank" rel="noopener noreferrer" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Login</a>
             </nav>
             <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors dark:bg-blue-500 dark:hover:bg-blue-600">Get License Key</a>
             <button id="mobile-menu-button" class="md:hidden p-2 text-gray-600 hover:text-gray-900 z-50 dark:text-gray-400 dark:hover:text-white" aria-label="Open menu"><svg id="menu-open-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg><svg id="menu-close-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg></button>
@@ -68,6 +70,8 @@
             <a href="how-to-use.html" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">How to Use</a>
             <a href="#faq" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">FAQ</a>
             <a href="contact.html" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Contact</a>
+            <a href="https://bookmark.nregabot.com" target="_blank" rel="noopener noreferrer" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Bookmarks</a>
+            <a href="https://license.nregabot.com/login" target="_blank" rel="noopener noreferrer" class="mobile-link text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400">Login</a>
             <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors mt-8 dark:bg-blue-500 dark:hover:bg-blue-600">Get License Key</a>
         </nav>
     </div>
@@ -126,16 +130,64 @@
                     </div>
                 </div>
             </section>
-
+            <!-- Price Section -->
             <section id="support" class="py-20 bg-gray-100 dark:bg-black/50">
                 <div class="container mx-auto px-6 text-center">
                     <h3 class="text-3xl font-bold text-gray-900 dark:text-white">Support the Project</h3>
                     <p class="text-gray-600 dark:text-gray-400 mt-2 max-w-3xl mx-auto">Your 30-day free trial starts automatically. After the trial, please consider purchasing a license to support app maintenance, bug fixes, and future updates.</p>
                     <div class="mt-12 grid md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
-                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Monthly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹99</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 1-Month license key. Perfect for short-term needs.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
-                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Quarterly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹289</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 3-Month license key. A great balance of value and flexibility.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
-                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800"><h4 class="font-bold text-xl">Half Yearly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹569</span></p><p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 6-Month license key. Ideal for longer projects.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a></div>
-                        <div class="bg-blue-600 text-white rounded-xl shadow-lg p-6 border border-blue-700 flex flex-col ring-4 ring-blue-300 dark:ring-blue-500/50"><h4 class="font-bold text-xl">Yearly Plan</h4><p class="text-4xl font-extrabold my-4"><span>₹999</span></p><p class="opacity-90 text-sm mb-6">A 1-Year license key. The best value for dedicated users.</p><a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-white text-blue-600 font-semibold w-full py-2 rounded-lg hover:bg-blue-100 transition-colors">Get Key</a></div>
+                        
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800">
+                            <h4 class="font-bold text-xl flex items-center justify-center">
+                                <span>Monthly Plan</span>
+                                <span class="bg-yellow-200 text-yellow-800 text-xs font-bold ml-2 px-2.5 py-0.5 rounded-full dark:bg-yellow-900 dark:text-yellow-300">50% OFF</span>
+                            </h4>
+                            <p class="text-4xl font-extrabold my-4 flex items-baseline justify-center gap-x-2">
+                                <span>₹99</span>
+                                <span class="text-xl font-medium text-gray-400 line-through">₹199</span>
+                            </p>
+                            <p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 1-Month license key. Perfect for short-term needs.</p>
+                            <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a>
+                        </div>
+
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800">
+                            <h4 class="font-bold text-xl flex items-center justify-center">
+                                <span>Quarterly Plan</span>
+                                <span class="bg-yellow-200 text-yellow-800 text-xs font-bold ml-2 px-2.5 py-0.5 rounded-full dark:bg-yellow-900 dark:text-yellow-300">47% OFF</span>
+                            </h4>
+                            <p class="text-4xl font-extrabold my-4 flex items-baseline justify-center gap-x-2">
+                                <span>₹289</span>
+                                <span class="text-xl font-medium text-gray-400 line-through">₹547</span>
+                            </p>
+                            <p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 3-Month license key. A great balance of value and flexibility.</p>
+                            <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a>
+                        </div>
+
+                        <div class="bg-white rounded-xl shadow-lg p-6 border dark:border-gray-700 flex flex-col dark:bg-gray-800">
+                            <h4 class="font-bold text-xl flex items-center justify-center">
+                                <span>Half Yearly Plan</span>
+                                <span class="bg-yellow-200 text-yellow-800 text-xs font-bold ml-2 px-2.5 py-0.5 rounded-full dark:bg-yellow-900 dark:text-yellow-300">48% OFF</span>
+                            </h4>
+                            <p class="text-4xl font-extrabold my-4 flex items-baseline justify-center gap-x-2">
+                                <span>₹569</span>
+                                <span class="text-xl font-medium text-gray-400 line-through">₹1095</span>
+                            </p>
+                            <p class="text-gray-600 dark:text-gray-400 text-sm mb-6">A 6-Month license key. Ideal for longer projects.</p>
+                            <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-gray-800 text-white font-semibold w-full py-2 rounded-lg hover:bg-black transition-colors dark:bg-gray-700 dark:hover:bg-gray-600">Get Key</a>
+                        </div>
+
+                        <div class="bg-blue-600 text-white rounded-xl shadow-lg p-6 border border-blue-700 flex flex-col ring-4 ring-blue-300 dark:ring-blue-500/50">
+                            <h4 class="font-bold text-xl flex items-center justify-center">
+                                <span>Yearly Plan</span>
+                                <span class="bg-yellow-400 text-yellow-900 text-xs font-bold ml-2 px-2.5 py-0.5 rounded-full">54% OFF</span>
+                            </h4>
+                            <p class="text-4xl font-extrabold my-4 flex items-baseline justify-center gap-x-2">
+                                <span>₹999</span>
+                                <span class="text-xl font-medium text-blue-200 line-through">₹2189</span>
+                            </p>
+                            <p class="opacity-90 text-sm mb-6">A 1-Year license key. The best value for dedicated users.</p>
+                            <a href="https://license.nregabot.com/buy" target="_blank" rel="noopener noreferrer" class="mt-auto bg-white text-blue-600 font-semibold w-full py-2 rounded-lg hover:bg-blue-100 transition-colors">Get Key</a>
+                        </div>
                     </div>
                 </div>
             </section>
