Update v2.6.4 - Featuring a much faster 'Send Wagelist' automation, improved 'MR Payment' for GP Logins, and a more dynamic UI.

--- a/web/versions.html
+++ b/web/versions.html
@@ -42,8 +42,25 @@
                 </div>
 
                 <div id="version-list" class="max-w-4xl mx-auto space-y-8">
-
+                    
                     <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.4 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 21, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **New Feature: Wagelist Range** - The 'Send Wagelist' tab now supports processing a specific, user-defined range of wagelists.</li>
+                            <li>🛠️ **Major Improvement: MR Payment** - Automation now supports both Block and GP logins and provides more precise approval status reports (JE vs. AE).</li>
+                            <li>🚀 **Performance Boost: Send Wagelist** - The 'Send Wagelist' automation is now significantly faster, selecting all EFMS options instantly using a single command.</li>
+                            <li>🛠️ **UI Overhaul: WC Gen** - The 'Workcode Generation' tab has been enhanced with Panchayat autocomplete, automatic profile saving, a results summary, and a more logical layout.</li>
+                            <li>🛠️ **UI/UX Enhancements** - The app header and footer have been upgraded with a personalized welcome message, a 'Workcode Extractor' shortcut, and a dynamic animated status indicator.</li>
+                            <li>🐞 **Critical Bug Fix: IF Edit** - Resolved a persistent timing issue in the 'IF Edit' tab that could cause the first work code in a batch to be skipped.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.4-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.6.4-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+
+                    <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.3 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 19, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
