--- a/web/versions.html
+++ b/web/versions.html
@@ -42,8 +42,26 @@
                 </div>
 
                 <div id="version-list" class="max-w-4xl mx-auto space-y-8">
-                    
+
                     <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.0 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 24, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **Major Performance Overhaul:** Implemented lazy loading for all tabs, ensuring near-instant application startup and significantly reduced memory usage.</li>
+                            <li>✨ **Feature:** Consolidated report exports on all major tabs into a single, unified system (Image, PDF, CSV) with data filtering.</li>
+                            <li>✨ **Improvement:** PDF reports are now styled with headers, footers, and status-based colors (red for failed, green for success).</li>
+                            <li>✨ **Improvement:** 'MR Payment' automation now allows verification of an exact wage amount and automatically skips MSRs that are pending approval.</li>
+                            <li>🐞 **Bug Fix:** Resolved a cloud upload error that occurred when re-exporting reports by giving each file a unique, timestamped name.</li>
+                            <li>🐞 **Bug Fix:** Corrected numerous bugs and crashes that occurred during the recent performance refactoring to ensure stability.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.0-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.0-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+
+                    
+                    <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.6.4 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 21, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
