fix emb entry , update footer

--- a/web/versions.html
+++ b/web/versions.html
@@ -44,6 +44,24 @@
                 <div id="version-list" class="max-w-4xl mx-auto space-y-8">
 
                     <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.1 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 27, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ **Feature (eMB Entry):** Added an 'Auto' checkbox to automatically fill the MB Number from the last four digits of the work code.</li>
+                            <li>✨ **Improvement (eMB Entry):** Mate Name field now accepts multiple comma-separated names and will randomly select one for each entry.</li>
+                            <li>✨ **UI Update (eMB Entry):** Removed JE Name and Designation fields to match recent website changes.</li>
+                            <li>✨ **Feature:** Added a new 'Reports' tab as a placeholder for upcoming reporting features.</li>
+                            <li>🐞 **Bug Fix:** The 'Manage Account' button in the About tab now correctly opens the user's web account page.</li>
+                            <li>⚙️ **Improvement:** The 'File Manager' button in the footer now opens the web-based file manager instead of the in-app tab.</li>
+                            <li>⚙️ **Build Process:** Significantly improved Docker build times by ignoring backup and upload directories.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.1-Setup.exe" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.1-macOS.dmg" class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download for macOS</a>
+                        </div>
+                    </div>
+
+                    <div class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.0 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 24, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
