update and fix server offline bug, add note to SA Report

--- a/web/versions.html
+++ b/web/versions.html
@@ -62,23 +62,21 @@
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.2 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: August 30, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
-                            <li><span class="tag new">New Feature</span> Added 'MIS Reports' tab to download multiple
+                            <li>✨ **Feature (MIS Reports):** Added 'MIS Reports' tab to download multiple
                                 reports into a single multi-sheet Excel file.</li>
-                            <li><span class="tag new">New Feature</span> The MIS Reports tab now automatically solves
-                                the mathematical CAPTCHA.</li>
-                            <li><span class="tag new">New Feature</span> Added a new 'Social Audit Report' automation
+                            <li>✨ **Feature (Social Audit Report):** Added a new 'Social Audit Report' automation
                                 for the SA View/Respond page.</li>
-                            <li><span class="tag enhancement">Enhancement</span> PDF exports for the Social Audit Report
-                                now have a dynamic title.</li>
-                            <li><span class="tag enhancement">Enhancement</span> Added a pop-up alert to notify users
-                                when automation tasks are complete.</li>
-                            <li><span class="tag enhancement">Enhancement</span> The MIS Reports tab now remembers the
+                            <li>⚙️ **Improvement:** The MIS Reports tab now remembers the
                                 last used State, District, and Block.</li>
-                            <li><span class="tag fix">Fix</span> Major improvements to web automation stability for
+                            <li>⚙️ **Improvement:** Add Activity: The automation now detects if an activity already
+                                exists and skips the work code to prevent errors.</li>
+                            <li>🐞 **Bug Fix:** Add Activity: Improved the stability of the automation by fixing a
+                                timing issue that prevented the 'Save' button from being clicked reliably.</li>
+                            <li>🐞 **Bug Fix:** Major improvements to web automation stability for
                                 handling page reloads and complex dynamic tables.</li>
-                            <li><span class="tag fix">Fix</span> Resolved a crash during PDF export caused by special
+                            <li>🐞 **Bug Fix:** Resolved a crash during PDF export caused by special
                                 characters (e.g., Hindi text).</li>
-                            <li><span class="tag fix">Fix</span> Fixed various bugs in the new report automations,
+                            <li>🐞 **Bug Fix:** Fixed various bugs in the new report automations,
                                 including input persistence and navigation logic.</li>
                         </ul>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4">
