--- a/web/index.html
+++ b/web/index.html
@@ -151,7 +151,8 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.7.3 is here!</strong> MIS Reports, Social Audit Report, and more.
+                        <strong>Version 2.7.3 is here!</strong> New features Demand Automation by csv file, just use
+                        Applicant register Report and keep only Applicant name & Jobcard.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
