update demand and renew subscription 2.7.6

--- a/web/index.html
+++ b/web/index.html
@@ -7,14 +7,14 @@
 
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
     <meta name="description"
-        content="Automate your NREGA tasks with NREGA Bot v2.7.5. Featuring critical bug fixes for the IF Editor, making material entry seamless and reliable.">
+        content="Automate your NREGA tasks with NREGA Bot v2.7.6. Featuring critical bug fixes for the Demand Automation, making renew and upgrade processes seamless. Download now for Windows and macOS.">
     <meta name="keywords"
         content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify, IF Editor">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="NREGA Bot v2.7.5">
+    <meta property="og:title" content="NREGA Bot v2.7.6">
     <meta property="og:description"
         content="The ultimate tool to save time and automate your tedious NREGA data entry tasks.">
     <meta property="og:image" content="https://nregabot.com/og-logo.png">
@@ -151,8 +151,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.7.5 is here!</strong> Critical bug fixes for the IF Editor make material entry
-                        seamless and reliable.
+                        <strong>Version 2.7.6 is here!</strong> Critical bug fixes for the Demand Automation make Renew and Upgrade processes seamless.
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -170,10 +169,10 @@
                         instantly.</p>
                     <div
                         class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.5-Setup.exe"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.6-Setup.exe"
                             class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download
                             for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.5-macOS.dmg"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.6-macOS.dmg"
                             class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download
                             for macOS</a>
                     </div>
